2018-07-18  Nick Clifton  <nickc@redhat.com>

	2.31.1 Release point.
	* version.m4: Set to 2.31.1
	* development.sh: Set to true.
	* configure: Regenerate.
	* po/bfd.pot: Regenerate.

2018-07-14  Nick Clifton  <nickc@redhat.com>

	* version.m4: Update to 2.31.0.
	* development.sh: Set to true.
	* configure: Regenerate.
	* po/bfd.pot: Regenerate.

2018-07-14  Nick Clifton  <nickc@redhat.com>

	2.31 Release point.
	* version.m4: Update to 2.31.
	* development.sh: Set to false.
	* configure: Regenerate.
	* po/bfd.pot: Regenerate.

2018-07-03  Alan Modra  <amodra@gmail.com>

	PR 17550
	* elflink.c (_bfd_elf_fix_symbol_flags): Hide dynamic symbols
	in discarded sections.

2018-07-11  Max Filippov  <jcmvbkbc@gmail.com>

	* elf32-xtensa.c (elf_xtensa_allocate_dynrelocs): Don't allocate
	space for dynamic relocation for undefined weak symbol.
	(elf_xtensa_relocate_section): Don't emit R_XTENSA_RELATIVE
	relocation for undefined weak symbols.
	(shrink_dynamic_reloc_sections): Don't shrink dynamic relocation
	section for relocations against undefined weak symbols.

2018-07-10  Maciej W. Rozycki  <macro@mips.com>

	* elflink.c (bfd_elf_final_link): Rename `remove' local variable
	to `remove_section'.

2018-07-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/23388
	* configure.ac: Use changequote for "i[3-7]86-*-linux-*".
	* configure: Regenerated.

2018-07-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/23372
	* elfxx-x86.c (_bfd_x86_elf_merge_gnu_properties): Remove x86
	ISA properties with empty bits.

2018-07-06  Alan Modra  <amodra@gmail.com>

	* elf32-arm.c (elf32_arm_nabi_write_core_note): Don't use
	DIAGNOTIC_PUSH and DIAGNOSTIC_POP unconditionally.
	* elf32-ppc.c (ppc_elf_write_core_note): Likewise.
	* elf32-s390.c (elf_s390_write_core_note): Likewise.
	* elf64-ppc.c (ppc64_elf_write_core_note): Likewise.
	* elf64-s390.c (elf_s390_write_core_note): Likewise.
	* elfxx-aarch64.c (_bfd_aarch64_elf_write_core_note): Likewise.

2018-07-05  Jim Wilson  <jimw@sifive.com>
